@startuml BankruptcyManager

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas BankruptcyManager

class BankruptcyManager {
    - game : Game*
    - logger : TransactionLogger*
    - gui : IGUI*
    - auctionManager : AuctionManager*
    __
    + BankruptcyManager(game : Game*, logger : TransactionLogger*, gui : IGUI*, auctionManager : AuctionManager*)
    + handleInsufficientFunds(debtor : Player&, amount : int, creditor : Player*) : bool
    __
    - calculateMaxLiquidation(player : const Player&) : int
    - canCoverDebt(player : const Player&, amount : int) : bool
    - runLiquidationPanel(player : Player&, targetAmount : int) : bool
    - sellPropertyToBank(player : Player&, property : Property*) : int
    - mortgageProperty(player : Player&, property : Property*) : int
    - declareBankruptcy(debtor : Player&, creditor : Player*) : void
    - transferAssetsToPlayer(from : Player&, to : Player&) : void
    - returnAssetsToBank(player : Player&) : void
}

' Kelas yang direferensi
class Game <<Engine>> {
    + getActivePlayers() : vector<Player*>
    + getActivePlayerCount() : int
}

class TransactionLogger <<Data>> {
    + log(turn, username, actionType, detail) : void
}

interface IGUI <<interface>> {
    + renderLiquidationPanel(player, options, debt) : void
    + getChoice(prompt, options) : int
    + renderBankruptcy(player, creditor) : void
    + renderMessage(msg) : void
}

class AuctionManager <<Engine>> {
    + runAuction(property, triggeringPlayer) : Player*
}

' Model yang dimanipulasi
class Player <<Model>> {
    + getBalance() : int
    + getOwnedProperties() : vector<Property*>
    + addMoney(amount) : void
    + deductMoney(amount) : bool
    + removeProperty(property) : void
    + addProperty(property) : void
    + setStatus(status) : void
    + calculateTotalWealth() : int
}

class Property <<Model>> {
    + getPurchasePrice() : int
    + getMortgageValue() : int
    + getStatus() : PropertyStatus
    + setStatus(status) : void
    + setOwner(owner) : void
    + clearOwner() : void
    + getAssetValue() : int
}

class StreetProperty <<Model>> {
    + getBuildingState() : BuildingState
    + clearBuildings() : void
    + sellBuildingValue() : int
}

' Relasi
BankruptcyManager --> Game : references >
BankruptcyManager --> TransactionLogger : references >
BankruptcyManager --> IGUI : references >
BankruptcyManager --> AuctionManager : uses for bank bankruptcy >
BankruptcyManager ..> Player : manipulates >
BankruptcyManager ..> Property : manipulates >
BankruptcyManager ..> StreetProperty : sells buildings >

Property <|-- StreetProperty

note bottom of BankruptcyManager
    <b>handleInsufficientFunds(debtor, amount, creditor):</b>
    1. canCoverDebt()? → hitung cash + maxLiquidation
    2. Jika BISA → runLiquidationPanel()
       · Pemain pilih: jual properti / gadai
       · Loop sampai uang cukup
       · Return true (berhasil bayar)
    3. Jika TIDAK BISA → declareBankruptcy()
       · creditor = Player? → transferAssetsToPlayer()
       · creditor = Bank (null)? → returnAssetsToBank()
         → Properti dikembalikan ke BANK
         → Bangunan dihancurkan
         → AuctionManager.runAuction() satu per satu
       · Return false (bangkrut)

    <b>sellPropertyToBank():</b>
    Harga jual = purchasePrice + (½ × harga bangunan)

    <b>mortgageProperty():</b>
    Pemain terima uang = mortgageValue
    Status properti → MORTGAGED
end note

@enduml
